--- a/generator/templates-bases/expand.jinja
+++ b/generator/templates-bases/expand.jinja
@@ -5,6 +5,11 @@
 %$${{ str }}$$
 {%- endmacro %}
 
+{% macro nth(i) -%}
+{{- i -}}
+{{- {1: "st", 2: "nd", 3: "rd"}.get(i+1, "th") -}}
+{%- endmacro %}
+
 {% macro define(f = None) -%}
   {%- if DEFINE -%}
     {%- filter macro() -%}
@@ -23,6 +28,13 @@
       {{- f.define() -}}
       {{ "\n" }}
     {%- endfilter -%}
+  {%- endif -%}
+{%- endmacro %}
+
+{% macro declare_nof() -%}
+  {%- if DECLARE -%}
+    {{- caller() -}}
+    {{- "\n" -}}
   {%- endif -%}
 {%- endmacro %}
 
@@ -54,6 +66,15 @@
     {%- endfilter -%}
   {%- endif -%}
 {%- endmacro %}
+
+{% macro doc_group(name, desc = "", shortname = "") %}
+{% set sname = shortname or name.split(" ")[0] %}
+{% if DOCUMENTATION %}
+/** \defgroup {{sname}} {{name}}
+ * {{desc}}
+ */
+{% endif %}
+{% endmacro %}
 
 {% macro recursive_macro(f) -%}
 {%- if DEFINE -%}
